Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3732

Avro scanner can break on strings >= 2GB

    XMLWordPrintableJSON

Details

    Description

      The avro scanner casts the string length to a 32-bit integer when reading strings. The avro spec states that strings can have 64-bit integer lengths. The truncation can overflow the 32-bit integer to a negative number.

      Attachments

        Activity

          People

            tarmstrong Tim Armstrong
            tarmstrong Tim Armstrong
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: